fix: update style for stats to avoid overlapping

--- a/english-for-kids/src/style/style.css
+++ b/english-for-kids/src/style/style.css
@@ -384,8 +384,8 @@
     flex-wrap: wrap;
     margin-top: 50px;
     position: absolute;
-    padding: 5% 0;
-    top: 0;
+    padding: 3% 0;
+    top: 17px;
     left: 0;
    width: 100%;
    z-index: 2;
